@@ -43,6 +43,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
     private String[] bonuses = {"Anatomist", "Cartographer", "Historian", "Photographer", "Backyard Birder", "Bird Bander", "Bird Counter", "Bird Feeder", "Diet Specialist", "Enclosure Builder", "Species Protector", "Falconer", "Fishery Manager", "Food Web Expert", "Forester", "Large Bird Specialist", "Nest Box Builder", "Omnivore Expert", "Passerine Specialist", "Platform Builder", "Prairie Manager", "Rodentologist", "Small Clutch Specialist", "Viticulturalist", "Wetland Scientist", "Wildlife Gardener"};
     private ArrayList<Bonus> bonusArr = new ArrayList<>();
     private int[][] diceLocMap = new int[5][2];
+    private Color[] colors = {Color.RED, Color.GREEN, Color.BLUE, Color.YELLOW};
     /*Gamestate variables */
 
     //Startselection variables
@@ -244,11 +245,11 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                         for (int i=0;i<5;i++){
                             if (startSelections[i]) state.players[state.playing].addCardToHand(startOptions[i]);
                         }//SFBIR  CHAGE BACK LATER
-                        if (startSelections[5]) state.players[state.playing].addFood("s", 5);
-                        if (startSelections[6]) state.players[state.playing].addFood("f", 5);
-                        if (startSelections[7]) state.players[state.playing].addFood("b", 5);
-                        if (startSelections[8]) state.players[state.playing].addFood("i", 5);
-                        if (startSelections[9]) state.players[state.playing].addFood("r", 5);
+                        if (startSelections[5]) state.players[state.playing].addFood("s", 1);
+                        if (startSelections[6]) state.players[state.playing].addFood("f", 1);
+                        if (startSelections[7]) state.players[state.playing].addFood("b", 1);
+                        if (startSelections[8]) state.players[state.playing].addFood("i", 1);
+                        if (startSelections[9]) state.players[state.playing].addFood("r", 1);
                         if (startSelections[10]) state.players[state.playing].addBonus(bonusOptions[0]);
                         else state.players[state.playing].addBonus(bonusOptions[1]);
                         if (state.playing == 3) {state.CURRENTEVENT.add("Game"); state.playing = 0;}
@@ -287,13 +288,6 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 // g.drawImage(Action_Button, 425, 200, 50,50,null);
                 // g.drawImage(Action_Button, 425, 450, 50,50,null);
                 // g.drawImage(Action_Button, 350, 725, 50,50,null);
-                // Score button clickable area (visible)
-                Graphics g = this.getGraphics();
-                if (Score_By_Round != null) g.drawImage(Score_By_Round, 815, 54, 51, 50, null);
-                 //         g.drawImage(Action_Button, 480, 120, 50 ,50, null);
-                 // g.drawImage(Action_Button, 425, 200, 50,50,null);
-                 // g.drawImage(Action_Button, 425, 450, 50,50,null);
-                 // g.drawImage(Action_Button, 350, 725, 50,50,null);
                 if (x>=184 && x<=231 && y>=180 && y<=222) state.CURRENTEVENT.add("View Birds");
                 // Score area click (user coordinates)
                 else if (x >= 815 && x <= 866 && y >= 54 && y <= 104) {
@@ -302,11 +296,14 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 else if (x>=190 && x<=235 && y>=440 && y<=484) state.CURRENTEVENT.add("View Bonus");
                 else if (x>=37 && x<=83 && y>=683 && y<=726) state.CURRENTEVENT.add("View Feeder");
                 else if (x>=508 && x<=589 && y>=22 && y<=86) state.CURRENTEVENT.add("Info");
-                else if (x>=1375 && x<=1425 && y>=615 && y<=665) state.CURRENTEVENT.add("View Draw Birds");
-                else if (x>=480 && x<=530 && y>=120 && y<=170) state.CURRENTEVENT.add("Play Bird");
+                else if (x>=480 && x<=530 && y>=120 && y<=170) {state.CURRENTEVENT.add("Play Bird");
+                    state.specificBirdToPlay=null;
+                    state.birdFoodsForPlayingBird=new int[5];
+                }
                 else if (x>=440 && x<=463 && y>=214 && y<=238){
                     if (state.players[state.playing].getBirdsInHabitat("forest").size()!=0)
                         state.CURRENTEVENT.add("On Activate Ability");
+                    state.players[state.playing].useAction(state.round, "forest");
                     //state.CURRENTEVENT.add("Select Food");
                     runningHabitat = "forest";
                     currentBirdNum = state.players[state.playing].getBoard().getBirdsInHabitat("forest").size()-1;
@@ -342,6 +339,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 }else if (x>=439 && x<=463 && y>=462 && y<=488 && state.players[state.playing].canLayEggs()){
                     if (state.players[state.playing].getBirdsInHabitat("grasslands").size()!=0)
                         state.CURRENTEVENT.add("On Activate Ability");
+                    state.players[state.playing].useAction(state.round, "grasslands");
                     //state.CURRENTEVENT.add("Lay Eggs");
                     runningHabitat = "grasslands";
                     currentBirdNum = state.players[state.playing].getBoard().getBirdsInHabitat("grasslands").size()-1;
@@ -382,6 +380,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 }else if (x>=366 && x<=387 && y>=736 && y<=759){
                     if (state.players[state.playing].getBirdsInHabitat("wetlands").size()!=0)
                         state.CURRENTEVENT.add("On Activate Ability");
+                    state.players[state.playing].useAction(state.round, "wetlands");
                     //state.CURRENTEVENT.add("Draw Birds");
                     runningHabitat = "wetlands";
                     currentBirdNum = state.players[state.playing].getBoard().getBirdsInHabitat("wetlands").size()-1;
@@ -430,8 +429,12 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                             tradeStarted = true;
                             if (runningHabitat.equals("wetlands")){
                                 state.CURRENTEVENT.removeLast();
-                                state.CURRENTEVENT.add("Draw Birds");
-                                state.CURRENTEVENT.add("Remove Egg");
+                                if (!state.players[state.playing].hasEggs()){
+                                    state.CURRENTEVENT.add("No Eggs");
+                                }else{
+                                    state.CURRENTEVENT.add("Draw Birds");
+                                    state.CURRENTEVENT.add("Remove Egg");
+                                }
                             }
                         }
                     }else if (x>=noCrds[0] && x<=noCrds[1] && y>=noCrds[2] && y<=noCrds[3]){
@@ -597,7 +600,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 // g2.drawRect(644, 155, 800-644, 392-155);
                 // g2.drawRect(644, 403, 800-644, 637-403);
                 // g2.drawRect(644,650,800-644,866-650);
-
+            
                 // g2.drawRect(815, 155, 969-815, 392-155);
                 // g2.drawRect(815, 403, 969-815, 637-403);
                 // g2.drawRect(815,650,969-815,866-650);
@@ -609,6 +612,11 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 // g2.drawRect(1152, 155, 1302-1152, 392-155);
                 // g2.drawRect(1152, 403, 1302-1152, 637-403);
                 // g2.drawRect(1152,650,1302-1152,866-650);
+                if(state.players[state.playing].getCardsInHand().isEmpty()){
+                    state.CURRENTEVENT.removeLast();
+                    repaint();
+                    return;
+                }
                 if(x>=470 && x<=628 && y>=155 && y<=392){ state.squaresClickedToPlayBird[0][0] = !state.squaresClickedToPlayBird[0][0]; state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="forest";} 
                 if(x>=469 && x<=627 && y>=403 && y<=637) {state.squaresClickedToPlayBird[1][0] = !state.squaresClickedToPlayBird[1][0]; state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="plains";}
                 if(x>=470 && x<=626 && y>=650 && y<=866){ state.squaresClickedToPlayBird[2][0] = !state.squaresClickedToPlayBird[2][0];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="wetlands";} 
@@ -743,33 +751,44 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                         bonusSelectOptions[0] = bonusArr.remove(0);
                         bonusSelectOptions[1] = bonusArr.remove(1);
                         state.CURRENTEVENT.add("Choose Bonus");
+                        
+
                     }
                 }else{
                     state.CURRENTEVENT.removeLast();
+                    state.nextTurn();
+
                 }
                 out.println(state.CURRENTEVENT);
                 repaint();
             }case "Choose Bonus" -> {
-                if (x>=400 && x<=645 && y>=470 && y<=825) {state.players[state.playing].addBonus(bonusSelectOptions[0]);state.CURRENTEVENT.removeLast();}
-                if (x>=800 && x<=1045 && y>=470 && y<=825) {state.players[state.playing].addBonus(bonusSelectOptions[1]);state.CURRENTEVENT.removeLast();}
-                repaint();
+                if (x>=400 && x<=645 && y>=470 && y<=825) {state.players[state.playing-1].addBonus(bonusSelectOptions[0]);state.CURRENTEVENT.removeLast();}
+                if (x>=800 && x<=1045 && y>=470 && y<=825) {state.players[state.playing-1].addBonus(bonusSelectOptions[1]);state.CURRENTEVENT.removeLast();}
+repaint();
             }case "Loop Draw" -> {
                 for (int i=0;i<loopOptions.size();i++){
                     if (x>=120+230*i && x<=335+230*i && y>=515 && y<=775){
-                        state.players[loopDrawing].addCardToHand(loopOptions.remove(i));
+                        state.players[loopDrawing-1].addCardToHand(loopOptions.remove(i));
                         loopDrawing = (loopDrawing+1)%4;
                     }
+                    
                     //g.drawImage(loopOptions.get(i).getImage(), 120+230*i, 515, 215, 260, null);
                 }
                 
-                if (loopOptions.size()<1) state.CURRENTEVENT.removeLast();
+                if (loopOptions.size()<1) {state.CURRENTEVENT.removeLast();}
                 repaint();
             }case "On Activate Ability" -> {
                 String ability = currentBird.getAbilityText();
                 out.println("Current Bird NUm: " + currentBirdNum);
                 if (currentBirdNum>-1){
-                    currentBird = state.players[state.playing].getBirdsInHabitat(runningHabitat).get(currentBirdNum);
-                }else {currentBird = null;state.CURRENTEVENT.removeLast();}
+                    currentBird = state.players[state.playing-1].getBirdsInHabitat(runningHabitat).get(currentBirdNum);
+                    ability = currentBird.getAbilityText();
+                }else {
+                    currentBird = null;
+                    state.CURRENTEVENT.removeLast();
+                }
+                
+                
                 out.println("ON ACTIVATE");
                 out.println("Ability: "+ability);
                 if (currentBird!=null && currentBird.getAbility().getTrigger().equals("OA")){
@@ -783,7 +802,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                                     selectingBool = false;
                                 }
                                 else if (x>=noCrds[0] && x<=noCrds[1] && y>=noCrds[2] && y<=noCrds[3]) {
-                                    state.players[state.playing].addFood("s",1);
+                                    state.players[state.playing-1].addFood("s",1);
                                     currentBirdNum--;
                                     feeder.removeDie("s");
                                     selectingBool = false;
@@ -796,14 +815,14 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                     }
                     else if (ability.contains("fewest birds in their")){currentBirdNum--;}
                     else if (ability.contains("Tuck 1 [card]")){
-                        if (x>=1400 && y>=590 && x<=1460 && y<=650 && currentShowing != state.players[state.playing].getCardsInHand().size()/showing)
+                        if (x>=1400 && y>=590 && x<=1460 && y<=650 && currentShowing != state.players[state.playing-1].getCardsInHand().size()/showing)
                         currentShowing++;
                         else if (x>=50 && x<=110 && y>=590 && y<=650 && currentShowing != 0) currentShowing--;
 
                         for (int i=0;i<4;i++){
                             if (x>=250+250*i && y>=500 && x<=490+250*i && y<=825){
-                                if (currentShowing*4+i<state.players[state.playing].getCardsInHand().size()){
-                                    state.players[state.playing].getCardsInHand().remove(currentShowing*4+i);
+                                if (currentShowing*4+i<state.players[state.playing-1].getCardsInHand().size()){
+                                    state.players[state.playing-1].getCardsInHand().remove(currentShowing*4+i);
                                     currentBird.tuckCard();
                                     currentBirdNum--;
                                     if (ability.contains("draw 1 [card]"))
@@ -811,9 +830,9 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                                     else if (ability.contains("lay 1 [egg]"))
                                         currentBird.addEggs(1);
                                     else if (ability.contains("gain 1 [fruit]"))
-                                        state.players[state.playing].addFood("b", 1);
+                                        state.players[state.playing-1].addFood("b", 1);
                                     else if (ability.contains("gain 1 [seed]"))
-                                        state.players[state.playing].addFood("s",1);
+                                        state.players[state.playing-1].addFood("s",1);
                                     else if (ability.contains("gain 1 [invertebrate] or [seed]"))
                                         out.println("I'm a lazy bum: Nuthatch ability");
                                 }
@@ -821,9 +840,17 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                         }
                     }
                     else if (ability.contains("Discard 1 [egg] from any")){
-                        state.CURRENTEVENT.add("Add Food");
-                        if (ability.contains("2")) state.CURRENTEVENT.add("Add Food");
-                        state.CURRENTEVENT.add("Remove Egg");
+                        if (state.players[state.playing-1].hasEggs()) {
+                            state.CURRENTEVENT.add("Add Food");
+                            if (ability.contains("2")) {
+                                state.CURRENTEVENT.add("Add Food");
+                            }
+                            state.CURRENTEVENT.add("Remove Egg");
+                            
+                        }else{
+                            state.CURRENTEVENT.add("No Eggs");
+                        }
+                        currentBirdNum--;
                     }
                     else if (ability.contains("Roll all dice not in birdfeeder")){
                         feeder.rollOutDice();
@@ -866,7 +893,21 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                         state.CURRENTEVENT.add("View Highlight Bird");
                     }
                     else if (ability.contains("If this bird is to the right")){
-                        currentBirdNum--;
+                        if (state.players[state.playing-1].getBirdsInHabitat(runningHabitat).getLast().equals(currentBird)){
+                            if (x>=247 && x<=466 && y>=154 && y<=394){
+                                out.println("Fly to forest");
+                                state.players[state.playing-1].getBoard().moveBird(currentBird, "forest");
+                                currentBirdNum--;
+                            }else if (x>=246 && x<=467 && y>=398 && y<=646){
+                                out.println("Fly to grasslands");
+                                state.players[state.playing-1].getBoard().moveBird(currentBird, "grasslands");    
+                                currentBirdNum--;
+                            }else if (x>=245 && x<=463 && y>=649 && y<=860){
+                                out.println("Fly to grasslands");
+                                state.players[state.playing-1].getBoard().moveBird(currentBird, "wetlands");
+                                currentBirdNum--;
+                            }
+                        }else currentBirdNum--;
                     }
                     else if (ability.contains("If you do, discard")){
                         state.CURRENTEVENT.add(state.CURRENTEVENT.indexOf("Game")+1, "Remove Bird");
@@ -876,8 +917,8 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                     }
                     else if (ability.contains("to tuck 2")){
                         String check = ability.contains("fish")? "f":"s";
-                        if (state.players[state.playing].hasFoodType(check)){
-                            state.players[state.playing].removeFood(check, 1);
+                        if (state.players[state.playing-1].hasFoodType(check)){
+                            state.players[state.playing-1].removeFood(check, 1);
                             state.CURRENTEVENT.add("Tuck Card");
                             state.CURRENTEVENT.add("Tuck Card");
                         }
@@ -899,7 +940,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                     }
                     else if (ability.contains("Repeat a brown power")){currentBirdNum--;}
                     else if (ability.contains("Trade 1 [wild] for any")){
-                        if (state.players[state.playing].hasFood()){
+                        if (state.players[state.playing-1].hasFood()){
                             state.CURRENTEVENT.add("Remove Food");
                             state.CURRENTEVENT.add("Add Food");
                             state.CURRENTEVENT.add("Add Food");
@@ -908,15 +949,53 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                             currentBirdNum--;
                         }
                     }
-                    else if (ability.contains("Repeat 1 [predator] power")){currentBirdNum--;}
-                    else if (ability.contains("All players lay 1 [egg] on any 1")){currentBirdNum--;}
+                    else if (ability.contains("Repeat 1 [predator] power")){
+                        int j = 0;
+                        ArrayList<Bird> birdArr = state.players[state.playing-1].getBirdsInHabitat(runningHabitat);
+                        if (runningHabitat.equals("grasslands")) j++;
+                        if (runningHabitat.equals("wetlands")) j+=2;
+                        for (int i=0;i<5;i++){
+                            if (x>=470+170*i && x<=644+170*i && y>=155+247*i && y<= 375+247*i){
+                                String a = birdArr.get(i).getAbilityText();
+                                if (a.contains("Roll all dice not in birdfeeder")){
+                                    feeder.rollOutDice();
+                                    String check="";
+                                    if (a.contains("[rodent]"))
+                                        check = "r";
+                                    else if (a.contains("[fish]"))
+                                        check = "f";
+                                    if (feeder.getOutDice().contains(check)){
+                                        currentBird.cacheFood();
+                                    }
+                                    currentBirdNum--;
+                                    state.CURRENTEVENT.add("View Feeder");
+                                }else if (a.contains("Look at a [card] from the deck")){
+                                    int span = 0;
+                                    if (a.contains("50")) span = 50;
+                                    else if (a.contains("75")) span = 75;
+                                    else span = 100;
+
+                                    highlighted = birds.remove(0);
+                                    if (highlighted.getWingspan()<span) currentBird.tuckCard();
+                                    currentBirdNum--;
+                                    state.CURRENTEVENT.add("View Highlight Bird");
+                                }
+                            }
+                            currentBirdNum--;
+                        }
+                    }
+                    else if (ability.contains("All players lay 1 [egg] on any 1")){
+                        playingHolder = state.playing-1;
+                        state.CURRENTEVENT.add("Loop Lay Eggs");
+                        currentBirdNum--;
+                    }
                     else if (currentBird.getName().equals("Mallard")){
                         state.CURRENTEVENT.removeLast();currentBirdNum--;state.CURRENTEVENT.add("Draw Birds");
                     }
                     else if (ability.contains("All players draw 1 [card]")){
                         for (int i=0;i<4;i++){
-                            state.players[state.playing].addCardToHand(birds.remove(0));
-                            state.playing = (state.playing+1)%4;
+                            state.players[state.playing-1].addCardToHand(birds.removeFirst());
+                            
                         }
                         currentBirdNum--;
                     }
@@ -925,7 +1004,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                         if (feeder.getDice().contains("b") && (feeder.getDice().contains("i")||feeder.getDice().contains("a"))){
                             if (selectingBool){
                                 if (x>=yesCrds[0] && x<=yesCrds[1] && y>=yesCrds[2] && y<=yesCrds[3]) {
-                                    state.players[state.playing].addFood("b", 1);
+                                    state.players[state.playing-1].addFood("b", 1);
                                     feeder.removeDie("b");
                                     currentBirdNum--;
                                     selectingBool = false;
@@ -936,7 +1015,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                                     }else{
                                         feeder.removeDie("a");
                                     }
-                                    state.players[state.playing].addFood("s",1);
+                                    state.players[state.playing-1].addFood("s",1);
                                     currentBirdNum--;
                                     selectingBool = false;
                                 }
@@ -946,13 +1025,13 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                             }
                         }else{
                             if (feeder.getDice().contains("b")){
-                                state.players[state.playing].addFood("b", 1);
+                                state.players[state.playing-1].addFood("b", 1);
                                 feeder.removeDie("b");
                             }else if (feeder.getDice().contains("i")){
-                                state.players[state.playing].addFood("i", 1);
+                                state.players[state.playing-1].addFood("i", 1);
                                 feeder.removeDie("i");
                             }else if (feeder.getDice().contains("a")){
-                                state.players[state.playing].addFood("i", 1);
+                                state.players[state.playing-1].addFood("i", 1);
                                 feeder.removeDie("a");
                             }
 
@@ -962,10 +1041,10 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                     }
                     else if (ability.contains("Gain 1 [invertebrate] from the birdfeeder")){
                         if (feeder.getDice().contains("i")){
-                            state.players[state.playing].addFood("i", 1);
+                            state.players[state.playing-1].addFood("i", 1);
                             feeder.removeDie("i");
                         }else if (feeder.getDice().contains("a")){
-                            state.players[state.playing].addFood("i", 1);
+                            state.players[state.playing-1].addFood("i", 1);
                             feeder.removeDie("a");
                         }
                         state.CURRENTEVENT.add("View Feeder");
@@ -976,29 +1055,30 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 
                 repaint();
             }case "Tuck Card" -> {
-                if (x>=1400 && y>=590 && x<=1460 && y<=650 && currentShowing != state.players[state.playing].getCardsInHand().size()/showing)
+                if (x>=1400 && y>=590 && x<=1460 && y<=650 && currentShowing != state.players[state.playing-1].getCardsInHand().size()/showing)
                     currentShowing++;
                 else if (x>=50 && x<=110 && y>=590 && y<=650 && currentShowing != 0) currentShowing--;
 
                 for (int i=0;i<4;i++){
                     if (x>=250+250*i && y>=500 && x<=490+250*i && y<=825){
-                        if (currentShowing*4+i<state.players[state.playing].getCardsInHand().size()){
-                            state.players[state.playing].getCardsInHand().remove(currentShowing*4+i);
+                        if (currentShowing*4+i<state.players[state.playing-1].getCardsInHand().size()){
+                            state.players[state.playing-1].getCardsInHand().remove(currentShowing*4+i);
                             currentBird.tuckCard();
                             state.CURRENTEVENT.removeLast();
                         }
                     }
                 }
                 repaint();
-            }case "Remove Bird" -> {
-                if (x>=1400 && y>=590 && x<=1460 && y<=650 && currentShowing != state.players[state.playing].getCardsInHand().size()/showing)
+            }
+            case "Remove Bird" -> {
+                if (x>=1400 && y>=590 && x<=1460 && y<=650 && currentShowing != state.players[state.playing-1].getCardsInHand().size()/showing)
                     currentShowing++;
                 else if (x>=50 && x<=110 && y>=590 && y<=650 && currentShowing != 0) currentShowing--;
 
                 for (int i=0;i<4;i++){
                     if (x>=250+250*i && y>=500 && x<=490+250*i && y<=825){
-                        if (currentShowing*4+i<state.players[state.playing].getCardsInHand().size()){
-                            state.players[state.playing].getCardsInHand().remove(currentShowing*4+i);
+                        if (currentShowing*4+i<state.players[state.playing-1].getCardsInHand().size()){
+                            state.players[state.playing-1].getCardsInHand().remove(currentShowing*4+i);
                             state.CURRENTEVENT.removeLast();
                         }
                     }
@@ -1008,88 +1088,21 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 String[] fo = {"s", "f", "b", "i", "r"};
                 for (int i=0;i<5;i++){
                     if (x>=250+100*i && x<=350+100*i && y>=550 && y<=650){
-                        if (state.players[state.playing].hasFoodType(fo[i])){
-                            state.players[state.playing].removeFood(fo[i], 1);
+                        if (state.players[state.playing-1].hasFoodType(fo[i])){
+                            state.players[state.playing-1].removeFood(fo[i], 1);
                             state.CURRENTEVENT.removeLast();
                         }
                     }
                 }
                 repaint();
-                }case "Add Food" -> {
-                    String[] fo = {"s", "f", "b", "i", "r"};
-                    for (int i=0;i<5;i++){
-                        if (x>=250+100*i && x<=350+100*i && y>=550 && y<=650){
-                            state.players[state.playing].addFood(fo[i], 1);
-                            state.CURRENTEVENT.removeLast();
-                            checkPinkPowers("Gain Food", fo[i]);
+            }case "Add Food" -> {
+                String[] fo = {"s", "f", "b", "i", "r"};
+                for (int i=0;i<5;i++){
+                    if (x>=250+100*i && x<=350+100*i && y>=550 && y<=650){
+                        state.players[state.playing-1].addFood(fo[i], 1);
+                        state.CURRENTEVENT.removeLast();
                     }
-                    }
-                    repaint();
-                }case "Once Between Turns Ability" -> {
-                if (pinkPowerQueue.isEmpty()) {
-                    state.CURRENTEVENT.removeLast();
-                    repaint();
-                    return;
                 }
-                
-                if (currentPinkBird == null) {
-                    currentPinkBird = pinkPowerQueue.peek();
-                    currentPinkOwner = pinkPowerOwnerQueue.peek();
-                }
-                
-                Player owner = state.players[currentPinkOwner];
-                String abilityText = currentPinkBird.getAbilityText();
-                
-                if (x>=1100 && x<=1400 && y>=300 && y<=400) {
-                    finishPinkPower();
-                    repaint();
-                    return;
-                }
-                
-                if (abilityText.contains("lay 1 [egg]")) {
-                     // autolay on first valid bird
-                     boolean laid = owner.layEggsOnAnyBird();
-                     if (!laid) {
-                         // manual force lay field
-                     }
-                     finishPinkPower();
-                } else if (abilityText.contains("gain 1 [fish]") || abilityText.contains("gain 1 [invertebrate]") || abilityText.contains("gain 1 [die]")) {
-                    if (abilityText.contains("from the supply")) {
-                        String food = "";
-                        if (abilityText.contains("[fish]")) food = "f";
-                        else if (abilityText.contains("[invertebrate]")) food = "i";
-                        
-                        if (!food.isEmpty()) {
-                            owner.addFood(food, 1);
-                            finishPinkPower();
-                        }
-                    } else if (abilityText.contains("from the birdfeeder")) {
-                         for (int i=0;i<5;i++){
-                            if (i < feeder.getDice().size() && x>=diceLocMap[i][0] && x<=diceLocMap[i][0]+90 && y>=diceLocMap[i][1] && y<=diceLocMap[i][1]+90){
-                                String die = feeder.getDice().get(i);
-                                owner.addFood(die, 1);
-                                feeder.getOutDice().add(feeder.getDice().remove(i));
-                                finishPinkPower();
-                                break;
-                            }
-                        }
-                    }
-                } else if (abilityText.contains("tuck 1 [card]")) {
-                    // auto set to first card within hand
-                    if (!owner.getCardsInHand().isEmpty()) {
-                        Bird card = owner.getCardsInHand().remove(0);
-                        currentPinkBird.tuckCard();
-                        finishPinkPower();
-                    } else {
-                        finishPinkPower();
-                    }
-                } else if (abilityText.contains("cache 1 [rodent]")) {
-                    currentPinkBird.cacheFood();
-                    finishPinkPower();
-                } else {
-                    finishPinkPower();
-                }
-                
                 repaint();
             }
             default ->{
@@ -1108,7 +1121,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 repaint();
             }
             case "Loop Lay Eggs" -> {
-                Bird[][] birdBoard = state.players[state.playing].getPlayerBoard();
+                Bird[][] birdBoard = state.players[state.playing-1].getPlayerBoard();
                 for (int i=0;i<3;i++){
                     for (int j=0;j<5;j++){
                         if (x>=470+170*j && x<=644+170*j && y>=155+247*i && y<= 375+247*i){
@@ -1116,7 +1129,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                                 if (birdBoard[i][j].getEggCount()<birdBoard[i][j].getMaxEggs()){
                                     if (birdBoard[i][j].getNest().equals(nestType) || birdBoard[i][j].getNest().equals("wild")){
                                         birdBoard[i][j].addEggs(1);
-                                        state.playing++;
+                                        
                                         runCount++;
                                     }
                                     
@@ -1242,7 +1255,6 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 //     // if(state.players[state.playing].playBird(state.players[state.playing].getCardsInHand().get(currentShowing*4+0),state.habitatToPlayBird,position ))
                 //         //     state.players[state.playing].getCardsInHand().remove(currentShowing*showing+0);
                 //         // 
-                
                 //         // state.CURRENTEVENT.removeLast();
                 //     //attempt to play bird
                 //     if(state.players[state.playing].canAffordBirdWithChosenFoods(state.specificBirdToPlay, state.birdFoodsForPlayingBird)){
@@ -1449,7 +1461,11 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 case "Choose Bonus" -> paintBonusDraw(g);
                 case "Loop Draw" -> paintLoopDraw(g);
                 case "On Activate Ability" -> paintOAAbility(g);
-                case "Remove Bird" -> paintViewBirds(g);
+                case "Remove Bird" -> {
+                    paintViewBirds(g);
+                    g.setFont(new Font("Arial", Font.BOLD, 55));
+                    g.drawString("Remove", 400, 456);
+                }
                 case "Tuck Card" -> paintViewBirds(g);
                 case "Once Between Turns Ability" -> paintOBTAbility(g);
                 case "Remove Food" -> paintViewFoods(g);
@@ -1461,6 +1477,14 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                     g.setFont(new Font("Arial", Font.BOLD, 55));
                     g.setColor(Color.BLACK);
                     g.drawString("Oops you have no food :(", 650, 420);
+                }
+                case "No Eggs" -> {
+                    paintGame(g);
+                    g.setColor(Color.CYAN);
+                    g.fillRect(600, 400, 300, 100);
+                    g.setFont(new Font("Arial", Font.BOLD, 55));
+                    g.setColor(Color.BLACK);
+                    g.drawString("Oops you have no eggs :(", 650, 420);
                 }
                 case "View Highlight Bird" -> {
                     paintGame(g);
@@ -1553,12 +1577,16 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                     // state.CURRENTEVENT.removeLast();
                 //attempt to play bird
                 if(state.players[state.playing].canAffordBirdWithChosenFoods(state.specificBirdToPlay, state.birdFoodsForPlayingBird)){
-                    if(state.players[state.playing].playBird(state.specificBirdToPlay, state.habitatToPlayBird, position, state.birdFoodsForPlayingBird))
-                    state.players[state.playing].getCardsInHand().remove(state.specificBirdToPlay);
+                    if(state.players[state.playing].playBird(state.specificBirdToPlay, state.habitatToPlayBird, position, state.birdFoodsForPlayingBird)){
+                        state.players[state.playing].getCardsInHand().remove(state.specificBirdToPlay);
+                        state.players[state.playing].useAction(state.round, "play");
+                    }
                     for (int i=0;i<5;i++) state.birdFoodsForPlayingBird[i]=0;
                     state.CURRENTEVENT.removeLast();
                     state.CURRENTEVENT.removeLast();
                     for (int i=0;i<3;i++) for (int j=0;j<5;j++) state.squaresClickedToPlayBird[i][j] = false;
+                    state.CURRENTEVENT.add("When Played Ability");
+                    currentBird = state.specificBirdToPlay;
                     repaint();
                     return;
                 }
@@ -1600,9 +1628,9 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                     
             }
         }
-            }
         }
-    
+    }
+
 
     public void paintOAAbility(Graphics g){
         String ability = currentBird.getAbilityText();
@@ -2230,6 +2258,43 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
         if (state.cardTray[0] != null) g.drawImage(state.cardTray[0].getImage(), 1356, 450, 85, 120, null);
         if (state.cardTray[1] != null) g.drawImage(state.cardTray[1].getImage(), 1446, 450, 85, 120, null);
         if (state.cardTray[2] != null) g.drawImage(state.cardTray[2].getImage(), 1446, 577, 85, 120, null);
+
+        //action cubes
+        g.setColor(colors[state.playing]);
+        int w = 20;
+        g.setFont(new Font("Arial", Font.BOLD, 25));
+        g.fillRect(293, 85, w, w);
+        g.fillRect(293, 258, w, w);
+        g.fillRect(293, 510, w, w);
+        g.fillRect(298, 780, w, w);
+        g.fillRect(1377, 400, w, w);
+        
+        String[] habs = state.players[state.playing].getActionUse(state.round);
+        out.println("Habs: " + Arrays.toString(habs));
+        int c = 0;
+        for (int i=0;i<8;i++){
+            if (habs[i].equals("play")) c+=1;
+        }
+        g.drawString("X " + c, 324, 105);
+        c = 0;
+
+        for (int i=0;i<8;i++){
+            if (habs[i].equals("forest")) c+=1;
+        }
+        g.drawString("X " + c, 324, 280);
+        c = 0;
+
+        for (int i=0;i<8;i++){
+            if (habs[i].equals("grasslands")) c+=1;
+        }
+        g.drawString("X " + c, 324, 530);
+        c = 0;
+
+        for (int i=0;i<8;i++){
+            if (habs[i].equals("wetlands")) c++;
+        }
+        g.drawString("X " + c, 324, 780);
+        g.drawString("X " + state.players[state.playing].getActionsRemaining(state.round), 1410, 424);
         
     }
     
@@ -2365,7 +2430,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
         g.drawString("Click anywhere to continue (that isn't skip)", 400, 200);
         g.drawString("Any When Placed abilities will be auto-activated", 300, 300);
         g.drawImage(currentBird.getImage(), 500, 400, 340, 470, null);
-        //g.drawImage(skip, 1000, 550, 300, 80, null);
+        g.drawImage(skip, 1000, 550, 300, 80, null);
         
     }
     
@@ -2536,6 +2601,10 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
     //read in birdinfo
     public void readCSV(File f){
         for (String b: bonuses) bonusMap.put(b, new ArrayList<String>());
+        String[] sb = {"American Bittern", "Hermit Thrush", "Common Loon", "Gray Catbird", "Northern Mockingbird"}; //add any skipped
+        ArrayList<String> skippedBirds = new ArrayList<String>();
+        String focusBird = "nope"; //bird that you want to test
+        for (String s: sb) skippedBirds.add(s);
         try (Scanner scan = new Scanner(f)) {
             Bird b;
             String[] items;
@@ -2640,14 +2709,6 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 readAmt -= 1;
             }
             //for (Bird birbo: birds) out.println(birbo.toString());
-
-            // For debugging: print out the bonus map
-            for (String bonus : bonuses) {
-                ArrayList<String> birdsWithBonus = bonusMap.get(bonus);
-                if (birdsWithBonus != null) {
-                    out.println(bonus + ": " + birdsWithBonus);
-                }
-            }
         } catch (Exception e) {
             out.println("Exception: " + e + "\ncsv reading ran into issue");
         }
@@ -2660,12 +2721,16 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
             for (Bird b: birds){
                 String name = b.getName().toLowerCase().replace("-","_").replace("'","").replace(" ","_");
                 //out.println(name);
+                //out.println("This bird sucks" + name);
                 b.setImage(ImageIO.read(Tester.class.getResource("/assets/birds/"+name+".png")));
                 
             }
         }catch(Exception e){
             out.println("Exception: "+e);
             out.println("Images couldn't be loaded.");
+        }
+        for (Bird b: birds){
+            //out.println(b.getName());
         }
     }
     
@@ -2811,10 +2876,10 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
             g.drawImage(birdArrSplit.get(currentShowing).get(i).getImage(), 250 + 250*i, 500, 240, 325, null);
         }
     }
+    public void paintLayEggs(Graphics g){
+        paintGame(g);
+    }
 }
-
-
-
 
 
      
